<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/bannerDiscription"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@id/banner"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bannerDiscription" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerDiscription"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/age"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullName"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30sp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30sp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/registerUser"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="24sp"
        android:backgroundTint="#0ED6B9"
        android:text="@string/registerUser"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="Missing Constrains" />

</RelativeLayout>